--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 layout: home
 author_profile: true
 ---
-
----
----
+<!DOCTYPE html>
 <html>
-<head>{% favicon %}</head>
+  <head>
+    {% favicon %}
+  </head>
+  <body>
+  </body>
 </html>
