--- a/index.html
+++ b/index.html
@@ -5,11 +5,5 @@
 layout: home
 author_profile: true
 ---
-<!DOCTYPE html>
-<html>
-  <head>
-    {% favicon %}
-  </head>
-  <body>
-  </body>
-</html>
+
+<link rel="shortcut icon" type="image/png" href="/favicon_800x800.png">
