--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ layout: home
 author_profile: true
 ---
 
-<link rel="shortcut icon" type="image/png" href="/favicon_800x800.png">
+<link rel="shortcut icon" type="image/png" href="favicon_800x800.png">
